@@ -7,28 +7,68 @@
  * Dependencies
  */
 
-	//foo
+	// Shared styling
+	@import './../../stylesupport/index.scss';
 
  /**
   * Styles
   */
-body {
-  color: #fff;
-  background: #222;
+
+.FormComponent__container {
+	width: 20%;
+	margin: 10%  auto;
+	border: 2px dashed white;
+	@include rem(width, 250px)
+	@include rem(padding, 35px 35px);
+
+	.FormComponent__input {
+		margin: 0 auto;
+		@include rem(width, 250px);
+		@include rem(margin, 40px 0 20px 0);
+
+		div {
+			input {
+				width: 100%;
+				@include rem(margin, 5px 0 5px 0);
+				@include rem(padding, 5px 5px);
+			}
+		}
+	}
 }
 
-.index img {
-  margin: 40px auto;
-  border-radius: 4px;
-  background: #fff;
-  display: block;
+.FormComponent__buttons {
+	button {
+		color: #FFFFFF;
+		text-shadow:0px 1px 0px #8E8115;
+		@extend .buttonDefault;
+	}
+
+	button:nth-of-type(1) {
+		@include rem(margin, 0 5px 0 0);
+		background:linear-gradient(to bottom, #70FA3A 5%, #62BB0C 100%);
+		background-color:#ffec64;
+		border:1px solid #10CA3C;
+	}
+
+	button:nth-of-type(1):hover {
+		background:linear-gradient(to bottom, #47D012 5%, #ABE375 100%);
+		background-color:#ffab23;
+	}
+
+	button:nth-of-type(2) {
+		background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+		background-color:#ffec64;
+		border:1px solid #ffaa22;
+	}
+
+	button:nth-of-type(2):hover {
+		background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+		background-color:#ffab23;
+	}
 }
 
-.index .notice {
-  margin: 20px auto;
-  padding: 15px 0;
-  text-align: center;
-  border: 1px solid #000;
-  border-width: 1px 0;
-  background: #666;
+.FormComponent__title {
+	text-align: center;
 }
+
+
