@@ -18,17 +18,19 @@ import FormComponent from './../FormComponent/FormComponent';
 /**
  * Component
  */
-let yeomanImage = require('../../images/yeoman.png');
+
+	// let yeomanImage = require('../../images/yeoman.png');
+	//<img src={yeomanImage} alt="Yeoman Generator" />
 
 class AppComponent extends React.Component {
-  render() {
-    return (
-      <div className="index">
-        <img src={yeomanImage} alt="Yeoman Generator" />
-        <FormComponent />
-      </div>
-    );
-  }
+
+	render() {
+		return (
+			<div className="index">
+				<FormComponent />
+			</div>
+		);
+	}
 }
 
 AppComponent.defaultProps = {
